Fixed not well aligned floating headings.

--- a/app/resources/documentation/manual/default-sass/default.sass
+++ b/app/resources/documentation/manual/default-sass/default.sass
@@ -2,6 +2,10 @@
 @import 'modules/sass/variables'
 @import 'modules/sass/specific'
 
+/* *************************************************************************** */
+/* ** Default **************************************************************** */
+/* *************************************************************************** */
+
 body
   display: grid
   grid-template-columns: auto auto
@@ -39,3 +43,7 @@ body
     box-sizing: border-box
     font-family: $default-font-family
     font-size: $default-font-size
+
+    h1, h2, h3, h4
+      width: 100%
+      display: inline-block
